--- a/project.html
+++ b/project.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Service / Projects</title>
-      <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-  
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
   <link rel='stylesheet' href='css/bootstrap.min.css'>
 
      
@@ -18,9 +18,10 @@
 
 <body>
 
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-primary">
   <div class="col-lg-4 col-xs-2 col-md-2">
-  <a class="navbar-brand" href="#" id="mainlogo"><img src="img/main3.png" id="mainlogoimg"></a></div>
+<!--  <a class="navbar-brand" href="#" id="mainlogo"><img src="img/main3.png" id="mainlogoimg"></a>-->
+ <a href="#" class="navbar-brand" style="color: wheat;font-size: 30px; font-family: 'raleway',san-serif;">CodEzy</a></div>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -28,74 +29,75 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto ">
       <li class="nav-item">
-        <a class="nav-link text-white" href="#">Home</a>
+        <a class="nav-link text-white" style="font-family: 'Raleway', sans-serif" href="#">Home</a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Services
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <div class="container">
             <div class="row">
-              <div class="col-md-3">
-                <span class="text-uppercase  text-dark">Web Development</span>
+              <div class="col-md-3" id="hello">
+                <span class="text-uppercase  text-dark">Web Development  <i id="icon" class="fa fa-long-arrow-right" aria-hidden="true"></i></span>
                 <ul class="nav flex-column">
                 <li class="nav-item">
-                  <a class="nav-link active text-dark" href="#">Design/Development</a>
+                  <a class="nav-link active text-dark" href="#">Design/Development  </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-dark" href="#">Hosting</a>
+                  <a class="nav-link text-dark" href="#">Hosting+SSL</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-dark" href="#">SSL</a>
+                  <a class="nav-link text-dark" href="#">Maintainence</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-dark" href="#">SSL</a>
+                  <a class="nav-link text-dark" href="#">Wordpress/Wix Site</a>
                 </li>
               </ul>
               </div>
               <!-- /.col-md-4  -->
-              <div class="col-md-3">
-               <span class="text-uppercase  text-dark">Category 1</span>
+              <div class="col-md-3" id="hello2">
+               <span class="text-uppercase  text-dark">Mobile &nbsp;<i id="icon2" class="fa fa-long-arrow-right" aria-hidden="true"></i></span>
+              
                 <ul class="nav flex-column">
                 <li class="nav-item">
-                  <a class="nav-link active text-dark" href="#">Active</a>
+                  <a class="nav-link active text-dark" href="#">Standalone Apps</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-dark" href="#">Link item</a>
+                  <a class="nav-link text-dark" href="#">Playstore Deploy</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-dark" href="#">Link item</a>
+                  <a class="nav-link text-dark" href="#">Database Based</a>
                 </li>
               </ul>
               </div>
               <!-- /.col-md-4  -->
                 <div class="col-md-3">
-               <span class="text-uppercase  text-dark">Category 1</span>
+               <span class="text-uppercase  text-dark">I O T</span>
                 <ul class="nav flex-column">
                 <li class="nav-item">
-                  <a class="nav-link active text-dark" href="#">Active</a>
+                  <a class="nav-link active text-dark" href="#">Home Automation</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-dark" href="#">Link item</a>
+                  <a class="nav-link text-dark" href="#">Robotics</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-dark" href="#">Link item</a>
+                  <a class="nav-link text-dark" href="#">Others</a>
                 </li>
               </ul>
               </div>
               <!-- /.col-md-4  -->
-                              <div class="col-md-3">
-               <span class="text-uppercase">Category 1</span>
+                <div class="col-md-3">
+               <span class="text-uppercase">Windows</span>
                 <ul class="nav flex-column">
                 <li class="nav-item">
-                  <a class="nav-link active text-dark" href="#">Active</a>
+                  <a class="nav-link active" href="#">Standalone Apps</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-dark" href="#">Link item</a>
+                  <a class="nav-link text-dark" href="#">Database Integrated</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-dark" href="#">Link item</a>
+                  <a class="nav-link text-dark" href="#">Security Based</a>
                 </li>
               </ul>
               </div>
@@ -109,7 +111,7 @@
         </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Projects
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -376,6 +378,12 @@
 <script src='jquery/jquery-3.3.1.slim.min.js'></script>
 <script src='js/bootstrap.min.js'></script>
 <script  src="js/dropdown.js"></script>
+<script>
+    $("#hello").hover(function () {
+    $("#icon").toggleClass("down");})
+    $("#hello2").hover(function () {
+    $("#icon2").toggleClass("down");})
+</script>
 </body>
 
 </html>
