--- a/service.html
+++ b/service.html
@@ -18,8 +18,7 @@
         <link rel="stylesheet" href="css/service.css">
   </head>
 
-  <body style="background-image:linear-gradient(-45deg,red,lightblue,whitesmoke);">
-<!--background-image: url(img/webstructure/Social-media2.png);background-position:40px 150px; background-repeat: no-repeat;background-attachment: fixed; padding: 0px;margin: 0px;-->
+  <body style="background-image: linear-gradient(-45deg,red,lightblue,whitesmoke);">
     <!-- Fixed navbar -->
      <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-primary">
   <div class="col-lg-4 col-xs-2 col-md-2" style="padding-bottom: 5px;padding-top: 5px;">
@@ -179,8 +178,6 @@
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
     </form>
--->
-<!--
  <div class="col-lg-3">
      <a href="" ><p style="color: whitesmoke;font-family: 'raleway',serif;font-size: 20px;text-align: center;">123-234-5656</p></a>
  </div>
@@ -259,6 +256,154 @@
 <div class="alert-box success">Successful Alert !!!</div>
 <div class="alert-box failure">Failure Alert !!!</div>       
 -->
+<!--div carousel-->
+<div class="container-fluid" style="height: 65px;"></div>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel"  style="padding-left: 190px;padding-right: 190px;background-color: black;" >
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner" >
+    <div class="carousel-item active" >
+      <img class="d-block w-100" src="img/webstructure/Social-media2.png" height="400px"  alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="img/webstructure/Development-Tools-min.jpg" height="400px" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="img/webstructure/Social-media2.png" height="400px" alt="Third slide">
+    </div>
+  </div>
+  
+</div>
+<!--close carousel-->
+
+<!--  web-->
+<!--
+   <div class="container-fluid">
+       <h1>Web &nbsp;&nbsp;Based&nbsp;&nbsp;Services</h1>
+   </div>
+-->
+   <div class="container-fluid" style="margin-top: 50px;">
+       <div class="container" id="jumbodiv" >
+            <div class="jumbotron" style="background-color: transparent;height:400px;padding-top: 40px;">
+        <h1 align="center" style="color: grey;margin-bottom: 20px;font-family: 'Raleway',sans-serif;font-size: 45px;padding-top: 0px;">Web &nbsp;&nbsp;Based&nbsp;&nbsp;Services</h1>
+        <p align="center" style="color:dimgray;font-size:22px;font-family: 'raleway',san-serif;margin-top: 40px;">Web Design, App Development, Home Automation & Other related services.</p>
+        <p align="center" style="color:dimgray;font-size:22px;font-family: 'raleway',san-serif;">Quality Work, Support, Affordable prices etc.</p>
+      </div>
+       </div>
+   </div>
+   
+   <!--    Why choose us-->
+ <div class="container-fluid" id="floated">
+                <div class="row" style="padding-left: 30px;padding-right: 30px;"> 
+                <div class="col-lg-4 col-xs-4 col-md-4" id="choosepanel">
+                        <div id="choosepanel2">
+                         <div align="center">
+                            <img src="img/whychooseus/icon1.png">
+                        </div>
+                        <h3>Quality Work</h3>
+                        <p class="why">We asuure that our work is based on provide quality products/Service to our Customer.</p>
+<!--
+                        <div class="col-xs-12 col-lg-12 col-md-12">
+                            <div id="progress"></div>
+                        </div>
+-->
+                        </div>
+                </div>
+               <div class="col-lg-4 col-xs-4 col-md-4" id="choosepanel">
+                        <div id="choosepanel2">
+                         <div align="center">
+                            <img src="img/whychooseus/icon4.png">
+                        </div>
+                        <h3>Best Support</h3>
+                        <p class="why">We asuure that our work is based on provide quality products/Service to our Customer.</p>
+<!--
+                        <div class="col-xs-12 col-lg-12 col-md-12">
+                              <div id="progress"></div>
+                        </div>
+-->
+                   </div>
+                </div>
+                <div class="col-lg-4 col-xs-6 col-md-4" id="choosepanel">
+                        <div id="choosepanel2">
+                         <div align="center">
+                            <img src="img/whychooseus/icon2.png">
+                        </div>
+                        <h3>Satisfaction</h3>
+                        <p class="why">We asuure that our work is based on provide quality products/Service to our Customer.</p>
+<!--                        <div class="col-xs-12 col-lg-12 col-md-12">  <div id="progress"></div></div>-->
+                    </div>
+                </div>
+     </div>      
+</div>
+<!--    close why choose us div-->
+<!--   close web-->
+  
+ 
+<!--  web-->
+<!--
+   <div class="container-fluid">
+       <h1>Web &nbsp;&nbsp;Based&nbsp;&nbsp;Services</h1>
+   </div>
+-->
+   <div class="container-fluid" style="padding-top: 70px;">
+       <div class="container" id="jumbodiv" style="background-color: whitesmoke;margin-bottom: 130px;">
+            <div class="jumbotron" style="background-color: transparent;height:400px;padding-top: 40px;">
+        <h1 align="center" style="color: grey;margin-bottom: 20px;font-family: 'Raleway',sans-serif;font-size: 45px;padding-top: 0px;">Web &nbsp;&nbsp;Based&nbsp;&nbsp;Services</h1>
+        <p align="center" style="color:dimgray;font-size:22px;font-family: 'raleway',san-serif;margin-top: 40px;">Web Design, App Development, Home Automation & Other related services.</p>
+        <p align="center" style="color:dimgray;font-size:22px;font-family: 'raleway',san-serif;">Quality Work, Support, Affordable prices etc.</p>
+      </div>
+       </div>
+   </div>
+   
+   <!--    Why choose us-->
+ <div class="container-fluid" id="floated2">
+                <div class="row" style="padding-left: 30px;padding-right: 30px;"> 
+                <div class="col-lg-4 col-xs-4 col-md-4" id="choosepanel">
+                        <div id="choosepanel2">
+                         <div align="center">
+                            <img src="img/whychooseus/icon1.png">
+                        </div>
+                        <h3>Quality Work</h3>
+                        <p class="why">We asuure that our work is based on provide quality products/Service to our Customer.</p>
+<!--
+                        <div class="col-xs-12 col-lg-12 col-md-12">
+                            <div id="progress"></div>
+                        </div>
+-->
+                        </div>
+                </div>
+               <div class="col-lg-4 col-xs-4 col-md-4" id="choosepanel">
+                        <div id="choosepanel2">
+                         <div align="center">
+                            <img src="img/whychooseus/icon4.png">
+                        </div>
+                        <h3>Best Support</h3>
+                        <p class="why">We asuure that our work is based on provide quality products/Service to our Customer.</p>
+<!--
+                        <div class="col-xs-12 col-lg-12 col-md-12">
+                              <div id="progress"></div>
+                        </div>
+-->
+                   </div>
+                </div>
+                <div class="col-lg-4 col-xs-6 col-md-4" id="choosepanel">
+                        <div id="choosepanel2">
+                         <div align="center">
+                            <img src="img/whychooseus/icon2.png">
+                        </div>
+                        <h3>Satisfaction</h3>
+                        <p class="why">We asuure that our work is based on provide quality products/Service to our Customer.</p>
+<!--                        <div class="col-xs-12 col-lg-12 col-md-12">  <div id="progress"></div></div>-->
+                    </div>
+                </div>
+     </div>      
+</div>
+<!--    close why choose us div-->
+<!--   close web-->
+   
 <!--    Footer  -->
      <div class="container-fluid" style="background-color: black;">
         <div class="row">
@@ -284,8 +429,7 @@
 <!--    close footer-->
  <!-- Bootstrap core JavaScript================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-<!-- <script src='jquery/jquery-3.3.1.slim.min.js'></script>-->
-<!--<script src='js/bootstrap.min.js'></script>-->
+
 <!--cdn-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
