--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <!--    <meta name="viewport" content="width=device-width, initial-scale=1">-->
     <meta name="description" content="CodEzy projects provides best IT Development services such as Website, Application, Iot Based projects development at affordable price. Best quality work, 24hr support etc.">
-    <title>CodeEzyProjects</title>
+    <title>CHATS |CodEzy Home Automation & Tecnological Solutions|</title>
 
     <!-- Bootstrap core CSS -->
             <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
@@ -23,7 +23,7 @@
      <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-primary">
   <div class="col-lg-4 col-xs-2 col-md-2" style="padding-bottom: 5px;padding-top: 5px;">
 <!--  <a class="navbar-brand" href="#" id="mainlogo"><img src="img/main3.png" id="mainlogoimg"></a>-->
- <a href="index.html" class="navbar-brand" >CodEzy</a></div>
+ <a href="index.html" class="navbar-brand" >CHATS</a></div>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -261,9 +261,9 @@
     <!-- Main component for a primary marketing message or call to action -->
     <div class="container-fluid" id="maincontent">
       <div class="jumbotron" style="margin-top: 100px; background-color: transparent">
-        <h1 align="center" style="color: whitesmoke;margin-bottom: 20px;font-family: 'Raleway',sans-serif;font-size: 60px;">IT Services</h1>
-        <p align="center" style="color:dimgray;font-size:22px;font-family: 'raleway',san-serif;margin-top: 40px;">Web Design, App Development, Home Automation & Other related services.</p>
-        <p align="center" style="color:dimgray;font-size:22px;font-family: 'raleway',san-serif;">Quality Work, Support, Affordable prices etc.</p>
+        <h1 align="center" style="color:antiquewhite;margin-bottom: 20px;font-family: 'Raleway',sans-serif;font-size: 60px;">IT Services</h1>
+        <p align="center" style="color:antiquewhite;font-size:22px;font-family: 'raleway',san-serif;margin-top: 40px;">Web Design, App Development, Home Automation & Other related services.</p>
+        <p align="center" style="color:bisque;font-size:22px;font-family: 'raleway',san-serif;">Quality Work, Support, Affordable prices etc.</p>
         <p align="center">
           <a class="btn btn-lg btn-primary" href="" role="button">Read More &raquo;</a>
         </p>
@@ -439,7 +439,7 @@
         <div class="row">
         <div class="col-lg-12 col-md-12 col-xs-12" align="center">
 <!--        <img id="footerlogo" src="img/main3.png">-->
-       <a href="index.html" class="navbar-brand" style="padding-left:20px;">CodEzy</a>
+       <a href="index.html" class="navbar-brand" style="padding-left:20px;">CHATS</a>
         </div>
         <div class="col-md-12 col-lg-12 col-xs-12" align="center">
                     <ul class="social-network social-circle">
@@ -451,7 +451,7 @@
                     </ul>			
             </div> 
                 <div class="col-lg-12 col-md-12 col-xs-12" align="center">
-                    <label><i>CodEzy All Rights Reserved @2018</i></label>
+                    <label><i>CodEzy Home Automation & Tecnological Solutions All Rights Reserved @2018</i></label>
                 </div>
         </div> 
       
