--- a/service.html
+++ b/service.html
@@ -11,16 +11,14 @@
             <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
            <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-<!--          <link rel='stylesheet' href='css/bootstrap.min.css'>-->
          <!--Custom style-->
         <link rel="stylesheet" href="css/common.css">
         <link rel="stylesheet" href="css/service.css">
   </head>
 
-  <body style="background-image: linear-gradient(-45deg,red,lightblue,whitesmoke);">
+  <body>
     <!-- Fixed navbar -->
-     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-primary">
+ <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-primary">
   <div class="col-lg-4 col-xs-2 col-md-2" style="padding-bottom: 5px;padding-top: 5px;">
 <!--  <a class="navbar-brand" href="#" id="mainlogo"><img src="img/main3.png" id="mainlogoimg"></a>-->
  <a href="index.html" class="navbar-brand" >CodEzy</a></div>
@@ -257,49 +255,67 @@
 <div class="alert-box failure">Failure Alert !!!</div>       
 -->
 <!--div carousel-->
-<div class="container-fluid" style="height: 65px;"></div>
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel"  style="padding-left: 190px;padding-right: 190px;background-color: black;" >
-  <ol class="carousel-indicators">
+
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel"  style="padding-left: 190px;padding-right: 190px;background-color: black;padding-top:65px;" >
+  <ol class="carousel-indicators" style="padding-bottom: 30px;">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
   </ol>
   <div class="carousel-inner" >
     <div class="carousel-item active" >
-      <img class="d-block w-100" src="img/webstructure/Social-media2.png" height="400px"  alt="First slide">
+   <div class="d-block w-100">
+        <h1 align="center" style="color: whitesmoke;margin-bottom: 20px;font-family: 'Raleway',sans-serif;font-size: 45px;padding-top: 0px;">I O T &nbsp;&nbsp;Based&nbsp;&nbsp;Services</h1>
+        <p align="center" style="color:dimgray;font-size:22px;font-family: 'raleway',san-serif;margin-top: 40px;">Web Design, App Development, Home Automation & Other related services.</p>
+        <p align="center" style="color:dimgray;font-size:22px;font-family: 'raleway',san-serif;">Quality Work, Support, Affordable prices etc.</p>
+   </div>
     </div>
+    
     <div class="carousel-item">
-      <img class="d-block w-100" src="img/webstructure/Development-Tools-min.jpg" height="400px" alt="Second slide">
+      <div class="d-block w-100">
+        <h1 align="center" style="color: whitesmoke;margin-bottom: 20px;font-family: 'Raleway',sans-serif;font-size: 45px;padding-top: 0px;">Windows &nbsp;&nbsp;Based&nbsp;&nbsp;Services/Application</h1>
+        <p align="center" style="color:dimgray;font-size:22px;font-family: 'raleway',san-serif;margin-top: 40px;">Web Design, App Development, Home Automation & Other related services.</p>
+        <p align="center" style="color:dimgray;font-size:22px;font-family: 'raleway',san-serif;">Quality Work, Support, Affordable prices etc.</p>
+   </div>
     </div>
+    
     <div class="carousel-item">
-      <img class="d-block w-100" src="img/webstructure/Social-media2.png" height="400px" alt="Third slide">
+     <div class="d-block w-100">
+        <h1 align="center" style="color: whitesmoke;margin-bottom: 20px;font-family: 'Raleway',sans-serif;font-size: 45px;padding-top: 0px;">Web &nbsp;&nbsp;Based&nbsp;&nbsp;Services</h1>
+        <p align="center" style="color:dimgray;font-size:22px;font-family: 'raleway',san-serif;margin-top: 40px;">Web Design, App Development, Home Automation & Other related services.</p>
+        <p align="center" style="color:dimgray;font-size:22px;font-family: 'raleway',san-serif;">Quality Work, Support, Affordable prices etc.</p>
+   </div>
     </div>
   </div>
+  
+   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
   
 </div>
 <!--close carousel-->
 
+
+
+
+
 <!--  web-->
-<!--
-   <div class="container-fluid">
-       <h1>Web &nbsp;&nbsp;Based&nbsp;&nbsp;Services</h1>
-   </div>
--->
-   <div class="container-fluid" style="margin-top: 50px;">
-       <div class="container" id="jumbodiv" >
-            <div class="jumbotron" style="background-color: transparent;height:400px;padding-top: 40px;">
+ <div class="container-fluid" style="background-color: whitesmoke;height:500px;padding-top: 70px;">
+<!--       <div class="container-fluid" id="jumbodiv" style="border-color: black;border-width:thin;border-style: solid;" >-->
         <h1 align="center" style="color: grey;margin-bottom: 20px;font-family: 'Raleway',sans-serif;font-size: 45px;padding-top: 0px;">Web &nbsp;&nbsp;Based&nbsp;&nbsp;Services</h1>
         <p align="center" style="color:dimgray;font-size:22px;font-family: 'raleway',san-serif;margin-top: 40px;">Web Design, App Development, Home Automation & Other related services.</p>
         <p align="center" style="color:dimgray;font-size:22px;font-family: 'raleway',san-serif;">Quality Work, Support, Affordable prices etc.</p>
-      </div>
-       </div>
+<!--       </div>-->
    </div>
    
-   <!--    Why choose us-->
  <div class="container-fluid" id="floated">
-                <div class="row" style="padding-left: 30px;padding-right: 30px;"> 
-                <div class="col-lg-4 col-xs-4 col-md-4" id="choosepanel">
-                        <div id="choosepanel2">
+                <div class="row" style="margin-left: 30px;margin-right: 30px; border-color: black;border-width:thin;border-style: solid;"> 
+                <div class="col-lg-4 col-xs-4 col-md-4" id="choosepanel" style="background: linear-gradient(135deg, rgb(30,87,153) 0%,rgb(41,137,216) 30%,rgb(41,137,216) 39%,rgb(32,124,202) 60%,rgb(32,124,202) 63%,rgb(32,124,202) 63%,rgb(32,124,202) 67%,rgb(125,185,232) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */">
                          <div align="center">
                             <img src="img/whychooseus/icon1.png">
                         </div>
@@ -310,10 +326,8 @@
                             <div id="progress"></div>
                         </div>
 -->
-                        </div>
                 </div>
                <div class="col-lg-4 col-xs-4 col-md-4" id="choosepanel">
-                        <div id="choosepanel2">
                          <div align="center">
                             <img src="img/whychooseus/icon4.png">
                         </div>
@@ -324,45 +338,33 @@
                               <div id="progress"></div>
                         </div>
 -->
-                   </div>
                 </div>
-                <div class="col-lg-4 col-xs-6 col-md-4" id="choosepanel">
-                        <div id="choosepanel2">
+                <div class="col-lg-4 col-xs-6 col-md-4" id="choosepanel" 
+                        style="background: linear-gradient(135deg, rgb(30,87,153) 0%,rgb(41,137,216) 30%,rgb(41,137,216) 39%,rgb(32,124,202) 60%,rgb(32,124,202) 63%,rgb(32,124,202) 63%,rgb(32,124,202) 67%,rgb(125,185,232) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */">
                          <div align="center">
                             <img src="img/whychooseus/icon2.png">
                         </div>
                         <h3>Satisfaction</h3>
                         <p class="why">We asuure that our work is based on provide quality products/Service to our Customer.</p>
 <!--                        <div class="col-xs-12 col-lg-12 col-md-12">  <div id="progress"></div></div>-->
-                    </div>
                 </div>
      </div>      
 </div>
-<!--    close why choose us div-->
 <!--   close web-->
   
  
-<!--  web-->
-<!--
-   <div class="container-fluid">
-       <h1>Web &nbsp;&nbsp;Based&nbsp;&nbsp;Services</h1>
-   </div>
--->
-   <div class="container-fluid" style="padding-top: 70px;">
-       <div class="container" id="jumbodiv" style="background-color: whitesmoke;margin-bottom: 130px;">
-            <div class="jumbotron" style="background-color: transparent;height:400px;padding-top: 40px;">
+<!--  Windows-->
+ <div class="container-fluid" style="padding-top: 190px;background-color:antiquewhite;height:730px;">
+<!--       <div class="container-fluid" id="jumbodiv" style="border-color: black;border-width:thin;border-style: solid;" >-->
         <h1 align="center" style="color: grey;margin-bottom: 20px;font-family: 'Raleway',sans-serif;font-size: 45px;padding-top: 0px;">Web &nbsp;&nbsp;Based&nbsp;&nbsp;Services</h1>
         <p align="center" style="color:dimgray;font-size:22px;font-family: 'raleway',san-serif;margin-top: 40px;">Web Design, App Development, Home Automation & Other related services.</p>
         <p align="center" style="color:dimgray;font-size:22px;font-family: 'raleway',san-serif;">Quality Work, Support, Affordable prices etc.</p>
-      </div>
-       </div>
+<!--       </div>-->
    </div>
    
-   <!--    Why choose us-->
  <div class="container-fluid" id="floated2">
-                <div class="row" style="padding-left: 30px;padding-right: 30px;"> 
-                <div class="col-lg-4 col-xs-4 col-md-4" id="choosepanel">
-                        <div id="choosepanel2">
+                <div class="row" style="margin-left: 30px;margin-right: 30px; border-color: black;border-width:thin;border-style: solid;"> 
+                <div class="col-lg-4 col-xs-4 col-md-4" id="choosepanel" style="background: linear-gradient(135deg, rgb(30,87,153) 0%,rgb(41,137,216) 30%,rgb(41,137,216) 39%,rgb(32,124,202) 60%,rgb(32,124,202) 63%,rgb(32,124,202) 63%,rgb(32,124,202) 67%,rgb(125,185,232) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */">
                          <div align="center">
                             <img src="img/whychooseus/icon1.png">
                         </div>
@@ -373,10 +375,8 @@
                             <div id="progress"></div>
                         </div>
 -->
-                        </div>
                 </div>
                <div class="col-lg-4 col-xs-4 col-md-4" id="choosepanel">
-                        <div id="choosepanel2">
                          <div align="center">
                             <img src="img/whychooseus/icon4.png">
                         </div>
@@ -387,25 +387,22 @@
                               <div id="progress"></div>
                         </div>
 -->
-                   </div>
                 </div>
-                <div class="col-lg-4 col-xs-6 col-md-4" id="choosepanel">
-                        <div id="choosepanel2">
+                <div class="col-lg-4 col-xs-6 col-md-4" id="choosepanel" 
+                        style="background: linear-gradient(135deg, rgb(30,87,153) 0%,rgb(41,137,216) 30%,rgb(41,137,216) 39%,rgb(32,124,202) 60%,rgb(32,124,202) 63%,rgb(32,124,202) 63%,rgb(32,124,202) 67%,rgb(125,185,232) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */">
                          <div align="center">
                             <img src="img/whychooseus/icon2.png">
                         </div>
                         <h3>Satisfaction</h3>
                         <p class="why">We asuure that our work is based on provide quality products/Service to our Customer.</p>
 <!--                        <div class="col-xs-12 col-lg-12 col-md-12">  <div id="progress"></div></div>-->
-                    </div>
                 </div>
      </div>      
 </div>
-<!--    close why choose us div-->
-<!--   close web-->
+<!--   close windows-->
    
 <!--    Footer  -->
-     <div class="container-fluid" style="background-color: black;">
+     <div class="container-fluid fot">
         <div class="row">
         <div class="col-lg-12 col-md-12 col-xs-12" align="center">
 <!--        <img id="footerlogo" src="img/main3.png">-->
