--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
      <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-primary">
   <div class="col-lg-4 col-xs-2 col-md-2" style="padding-bottom: 5px;padding-top: 5px;">
 <!--  <a class="navbar-brand" href="#" id="mainlogo"><img src="img/main3.png" id="mainlogoimg"></a>-->
- <a href="index.html" class="navbar-brand text-white" >CHATS</a></div>
+ <a href="index.html" class="navbar-brand" >CHATS</a></div>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -221,7 +221,7 @@
 
  
 <!--service and projects div-->
-<div class="container-fluid" style="padding: 0px;background-color:whitesmoke;">
+<div class="container-fluid" style="background-color:whitesmoke;padding-bottom:20px;">
         <div class="container-fluid">
         <div class="container-fluid">
         <h2>S&nbsp; E &nbsp;R&nbsp; V&nbsp; I&nbsp; C&nbsp; E&nbsp; S</h2></div><hr>
@@ -241,11 +241,11 @@
 			<a href="#sit-amet" class="nav-link" data-toggle="tab" role="tab" aria-controls="sit-amet">I O T</a>
 		</li>
 	</ul>
-	<div class="tab-content">
+	<div class="tab-content container-fluid" style="padding:0px;margin:0px;padding-top:20px;padding-bottom: 30px;background-color: burlywood">
 		<div class="tab-pane fade show active" id="lorem" role="tabpanel">
 <!--		<h2>Web &nbsp;Based</h2>-->
 			<div class="row"  style="padding-bottom: 30px;">
-			<div class="col-lg-6 col-md-12 col-xs-12"><img src="img/serviceimg/web.jpg" class="img-fluid" style="padding: 20px;" height="300px" alt=""></div>
+			<div class="col-lg-6 col-md-12 col-xs-12"><img src="img/serviceimg/web.jpg" class="img-fluid" style="padding: 20px;" height="400px" alt=""></div>
 			<div class="col-lg-6 col-md=6 col-xs-12" id="lorempara"><p style="padding: 20px;padding-top: 30px; padding-bottom: 0px;font-size: 30px;">Website  based services  : </p>
 			<p align="center">Cutting Edge website design as per client needs. </p>
 				<p align="center">Backend programming of website. (UI) </p>
@@ -348,7 +348,7 @@
 
 <!--    static img content-->
            <div class="container-fluid" style="background-image: linear-gradient(-45deg,red,lightblue,whitesmoke);">
-                <div class="jumbotron" style="margin-bottom: 80px; background-color: transparent;">
+                <div class="jumbotron" style="padding-bottom: 120px; background-color: transparent;">
                     <h1 align="center" style="color: white;margin-top: 70px; margin-bottom: 20px;">IT Services</h1>
                     <p align="center" style="color:dimgray;font-size:22px;font-family: 'raleway',san-serif;">Web Design, App Development, Home Automation</p>
                      <p align="center" style="color:dimgray;font-size:22px;font-family: 'raleway',san-serif;">& Other related services.</p>
