--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
      <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-primary">
   <div class="col-lg-4 col-xs-2 col-md-2" style="padding-bottom: 5px;padding-top: 5px;">
 <!--  <a class="navbar-brand" href="#" id="mainlogo"><img src="img/main3.png" id="mainlogoimg"></a>-->
- <a href="index.html" class="navbar-brand text-white" >CHATS</a></div>
+ <a href="index.html" class="navbar-brand" >CHATS</a></div>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
